@@ -21,7 +21,6 @@ use Socket;
 use IO::Socket;
 use IO::Select;
 
-use Net::IP qw(ip_is_ipv4 ip_is_ipv6 ip_normalize); 
 use Net::DNS;
 use Net::DNS::Packet;
 
@@ -321,12 +320,12 @@ sub nameservers {
 	my @a;
 	foreach my $ns (@_) {
 	    if ($ns =~ /^(\d+(:?\.\d+){0,3})$/) {
-		if ( ip_is_ipv4($ns) ) {
+		if ( _ip_is_ipv4($ns) ) {
 		    push @a, ($1 eq '0') ? '0.0.0.0' : $1;
 		}
 		
 	    }
-	    elsif ( ip_is_ipv6($ns) ) {
+	    elsif ( _ip_is_ipv6($ns) ) {
 		push @a, ($ns eq '0') ? '::0' : $ns;
 		
 	    } else  {
@@ -357,7 +356,7 @@ sub nameservers {
     }
     my @returnval;
     foreach my $ns (@{$self->{'nameservers'}}){
-	next if ip_is_ipv6($ns) && (! $has_inet6 || $self->force_v4() );
+	next if _ip_is_ipv6($ns) && (! $has_inet6 || $self->force_v4() );
 	push @returnval, $ns;
     }
     
@@ -754,7 +753,7 @@ sub send_udp {
 	      push @ns,[$ns_address,$dst_sockaddr,$sockfamily];
 	      
 	  }else{
-	      next NSADDRESS unless( ip_is_ipv4($ns_address));
+	      next NSADDRESS unless( _ip_is_ipv4($ns_address));
 	      my $dst_sockaddr = sockaddr_in($dstport, inet_aton($ns_address));
 	      push @ns, [$ns_address,$dst_sockaddr,AF_INET];
 	  }
@@ -963,7 +962,7 @@ sub bgsend {
 	}else{
 	    $sockfamily=AF_INET;
 	    
-	    if (! ip_is_ipv4($ns_address)){
+	    if (! _ip_is_ipv4($ns_address)){
 		$self->errorstring("bgsend(ipv4 only):$ns_address does not seem to be a valid IPv4 address");
 		return;
 	    }
@@ -1410,7 +1409,7 @@ sub _create_tcp_socket {
 	#my $old_wflag = $^W;
 	#$^W = 0;
 	
-	if ($has_inet6 && ! $self->force_v4() && ip_is_ipv6($ns) ){
+	if ($has_inet6 && ! $self->force_v4() && _ip_is_ipv6($ns) ){
 		# XXX IO::Socket::INET6 fails in a cryptic way upon send()
 		# on AIX5L if "0" is passed in as LocalAddr
 		# $srcaddr="0" if $srcaddr eq "0.0.0.0";  # Otherwise the INET6 socket will just fail
@@ -1441,7 +1440,7 @@ sub _create_tcp_socket {
 	# Try v4.
 	
 	unless($sock){
-		if (ip_is_ipv6($ns)){
+		if (_ip_is_ipv6($ns)){
 			$self->errorstring(
 					   'connection failed (trying IPv6 nameserver without having IPv6)');
 			print 
@@ -1474,6 +1473,60 @@ sub _create_tcp_socket {
 	return $sock;
 }
 
+# The next two is lightweight versions of subroutines from Net::IP module
+
+sub _ip_is_ipv4 {
+    $_ = shift;
+
+    return 0 if !m/^[\d\.]+$/ || m/^\./ || m/\.$/;
+
+
+    # Single Numbers are considered to be IPv4
+    return 1 if m/^(\d+)$/ && $1 < 256;
+
+    # Count quads
+    my $n = tr/\./\./;
+
+    # IPv4 must have from 1 to 4 quads
+    # remember 1.1 expands to 1.0.0.1 and is legal.
+    return 0 unless $n >= 0 && $n < 4 && !m/\.\./;
+
+    foreach (split /\./) { # Check for invalid quads
+	return 0 unless $_ >= 0 && $_ < 256;
+    }
+
+    1;
+}
+
+sub _ip_is_ipv6 {
+    $_ = shift;
+
+    # Count octets
+    my $n = tr/:/:/;
+    return 0 unless $n > 0 && $n < 8;
+
+    # Does the IP address start/finishes with : || have more than one '::' pattern ?
+    return 0 if m/^:[^:]/ || m/[^:]:$/ || s/:(?=:)//g > 1;
+
+    # $k is a counter
+    my $k;
+
+    foreach (split /:/) {
+        $k++;
+
+        next unless $_; # Empty octet ?
+    
+        next if /^[a-f\d]{1,4}$/i; # Normal v6 octet ?
+        
+        if ($k == $n + 1) { # Last octet - is it IPv4 ?
+            next if _ip_is_ipv4($_);
+        }
+
+        return 0;
+    }
+
+    1;
+}
 
 
 
